Changed to java 9 implementations of list